# pyrihelion

./: .eslintrc.yml  .gitignore  .pre-commit-config.yaml  .prettierrc.yml  .ruff.toml  index.html  package-lock.json  package.json  pre-commit-config.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
assets/: index-48c5e693.js  index-84083928.js  index-b2d25c93.css
setup/: vite-plugin-py-package.js  vite-plugin-py-package.ts
src/: App.vue  injection.ts  injectionKeys.ts  main.ts  style.scss
src-js/: App.vue  database.ts  main.ts  module.d.ts  preferences.ts  style.scss
src-js/components/: ButtonReset.vue  ButtonRun.vue  ButtonStop.vue  Canvas.vue  ConfirmDialog.vue  CookieBanner.vue  Editor.vue  ToolBar.vue
src-js/gangleri/: entity.ts  index.ts  lineSegments.ts  message.ts  pythonBackend.ts  scene.ts  updateRate.ts
src-js/python/: index.ts  python.ts  pythonWorker.ts
src-py/default-code/: default.py
src-py/gangleri/: LICENSE  pyproject.toml
src-py/gangleri/gangleri/: __init__.py  _engine.py  _entity.py  _ffi.py  _registry.py  _vector.py  typing.py
src/components/: ButtonDownload.vue  ButtonReset.vue  ButtonRun.vue  ButtonStop.vue  ButtonUpload.vue  Canvas.vue  Editor.vue  SplitPane.vue  TextOutput.vue  ToolBar.vue
src/gangleri/: index.ts  message.ts  pythonBackend.ts  scene.ts
src/python/: index.ts  python.ts  pythonWorker.ts
